kubernetes/apps/database/emqx/cluster/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emqx-dashboard
  annotations:
    external-dns.alpha.kubernetes.io/target: "internal.${SECRET_DOMAIN}"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Database
    gethomepage.dev/name: EMQX
    gethomepage.dev/icon: emqx.png
    gethomepage.dev/description: MQTT Broker
spec:
  ingressClassName: internal
  rules:
    - host: "emqx.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: emqx-dashboard
                port:
                  number: 18083
